# zen-build-suite-43

./: .env  BUILD_MULTIPLATFORM.md  BUILD_WINDOWS.md  README.md  TAURI_INTEGRATION.md  WEBSITE_PREVIEW_FIXES.md  index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: setup.sh
src/: TauriBrowserEngine.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FullScreenWebView.tsx  SerenityBrowser (1).tsx  SerenityBrowser.tsx  TauriBrowserEngine.tsx  TauriWebView (1).tsx  TauriWebView.tsx  UniversalBrowser.tsx  WebBrowserEngine.tsx
src/components/mindfulness/: AmbientSounds.tsx  BreathingTimer.tsx  DistractionBlocker.tsx  GratitudePrompt.tsx  MindfulReminder.tsx  PomodoroTimer.tsx  SessionJournal.tsx
src/components/reading/: AutoScroll.tsx  ReaderMode.tsx  TextToSpeech.tsx  WordCount.tsx
src/components/ui/: button.tsx
src/hooks/: use-theme.tsx
src/integrations/supabase/: client.ts  types.ts
src/pages/: Index.tsx
supabase/: config.toml
supabase/functions/browserless-render/: index.ts
supabase/migrations/: 20250928095905_b50bbbb1-c7ee-4707-aab3-24d2e859ad5a.sql
